--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,79 +8,39 @@
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Larissa Ferreira">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Título h1</h1>
-    <h2>Título h2</h2>
-    <h3>Título h3</h3>
-    <h4>Título h4</h4>
-    <h5>Título h5</h5>
-    <h6>Título h6</h6>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-     Qui, repudiandae consequuntur incidunt accusamus ad nostrum 
-     commodi asperiores atque nam fugit officiis fugiat expedita
-    reiciendis necessitatibus eos labore, sed similique dolor!</p>
-    <img width="650px" height="350px" src="https://img.ibxk.com.br/2021/06/09/09104542797072.gif"/> <br>
-    <img width="650px" height="350px" src="https://media4.giphy.com/media/SFGkn5wLdvcOY/giphy.gif"/>
-    <!-- <img width="50%" height="50%" src="https://img.ibxk.com.br/2021/06/09/09104542797072.gif"/>
-    <img width="50%" height="50%" src="https://media4.giphy.com/media/SFGkn5wLdvcOY/giphy.gif"/> -->
-    <a href="https://www.youtube.com/" target="_blank"> <br>
-        <img width="400px" height="400px" src="https://yt3.ggpht.com/584JjRp5QMuKbyduM_2k5RlXFqHJtQ0qLIPZpwbUjMJmgzZngHcam5JMuZQxyzGMV5ljwJRl0Q=s900-c-k-c0x00ffffff-no-rj">
-    </a>
-
-    <h4>Tarefas Diárias!</h4>
-    <ol>
-        <li>Lavar louça</li>
-        <li>Molhar plantas</li>
-        <li>
-            Estudar
-            <ol>
-                <li>Java</li>
-                <li>MySQL</li>
-            </ol>
-        </li>
-    </ol>
-
-
-    <h4>Tarefas Diárias!</h4>
-    <ul>
-        <li>Lavar louça</li>
-        <li>Molhar plantas</li>
-        <li>
-            Estudar
-            <ul>
-                <li>Java</li>
-                <li>MySQL</li>
-            </ul>
-        </li>
-    </ul>
-
-
-    <table>
-        <caption>Monthly savings</caption>
-        <thead>
-            <tr>
-                <th>Month</th>
-                <th>Savings</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>January</td>
-                <td>$100</td>
-            </tr>
-            <tr>
-                <td>February</td>
-                <td>$80</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td></td>
-                <td><small>Sum: $180</small></td>
-            </tr>
-        </tfoot>
-    </table>
+    <h2>Página Inicial</h2>
+    <aside>
+        <ul>
+            <li>
+                <a href="h.html">Títulos</a>
+            </li>
+            <li>
+                <a href="paragrafos.html">Parágrafos</a>
+            </li>
+            <li>
+                <a href="imagens.html">Imagens</a>
+            </li>
+            <li>
+                <a href="links.html">Links</a>
+            </li>
+            <li>
+                <a href="listas.html">Listas</a>
+            </li>
+            <li>
+                <a href="tabelas.html">Tabelas</a>
+            </li>
+            <li>
+                <a href="forms.html">Formulários</a>
+            </li>
+            <li>
+                <a href="iframe.html">iFrame</a>
+            </li>
+        </ul>
+    </aside>
 </body>
 </html>
 <!-- html:5 --> 
