--- a/HTML/imagens.html
+++ b/HTML/imagens.html
@@ -2,14 +2,17 @@
 <html lang="pt-br">
     <!-- HTML inicial -->
 <head>
-    <title>Primeira página html</title>
+    <title>Imagens</title>
     <meta charset="UTF-8">
     <meta name="description" content="Primeira página">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Larissa Ferreira">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1 class="edit-titulo">Imagens</h1>
     <div id="imagens">
         <img width="650px" height="350px" src="https://img.ibxk.com.br/2021/06/09/09104542797072.gif"/> <br>
         <img width="650px" height="350px" src="https://media4.giphy.com/media/SFGkn5wLdvcOY/giphy.gif"/>
