--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <!-- HTML inicial -->
 <head>
-    <title>Primeira página html</title>
+    <title>Laricell S2</title>
     <meta charset="UTF-8">
     <meta name="description" content="Primeira página">
     <meta name="keywords" content="HTML, CSS, JavaScript">
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h2>Página Inicial</h2>
+    <h1 class="edit-titulo">Página Inicial</h1>
     <aside>
-        <ul>
+        <ul class="navlist">
             <li>
                 <a href="h.html">Títulos</a>
             </li>
@@ -36,7 +36,7 @@
             <li>
                 <a href="forms.html">Formulários</a>
             </li>
-            <li>
+            <li >
                 <a href="iframe.html">iFrame</a>
             </li>
         </ul>
