--- a/HTML/links.html
+++ b/HTML/links.html
@@ -2,14 +2,17 @@
 <html lang="pt-br">
     <!-- HTML inicial -->
 <head>
-    <title>Primeira página html</title>
+    <title>Links</title>
     <meta charset="UTF-8">
     <meta name="description" content="Primeira página">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Larissa Ferreira">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1 class="edit-titulo">Links</h1>
     <div id="links">
         <a href="https://www.youtube.com/" target="_blank"> <br>
             <img width="400px" height="400px" src="https://yt3.ggpht.com/584JjRp5QMuKbyduM_2k5RlXFqHJtQ0qLIPZpwbUjMJmgzZngHcam5JMuZQxyzGMV5ljwJRl0Q=s900-c-k-c0x00ffffff-no-rj">
