--- a/HTML/listas.html
+++ b/HTML/listas.html
@@ -2,14 +2,17 @@
 <html lang="pt-br">
     <!-- HTML inicial -->
 <head>
-    <title>Primeira página html</title>
+    <title>Listas</title>
     <meta charset="UTF-8">
     <meta name="description" content="Primeira página">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Larissa Ferreira">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1 class="edit-titulo">Listas</h1>
     <div id="listas">
         <h4>Tarefas Diárias!</h4>
     <ol>
