--- a/HTML/tabelas.html
+++ b/HTML/tabelas.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <!-- HTML inicial -->
 <head>
-    <title>Primeira página html</title>
+    <title>Tabelas</title>
     <meta charset="UTF-8">
     <meta name="description" content="Primeira página">
     <meta name="keywords" content="HTML, CSS, JavaScript">
@@ -12,66 +12,64 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <h1 class="edit-titulo">Tabelas</h1>
     <div id="tabelas">
-        <table>
+        <table class="contained">
             <caption><h3>Monthly savings</h3></caption>
             <thead>
                 <tr>
-                    <th>Month</th>
-                    <th>Savings</th>
+                    <th class="w-50">Month</th>
+                    <th colspan="2">Savings</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>January</td>
-                    <td>$100</td>
+                    <td class="w-50">January</td>
+                    <td class="w-40">$100</td>
+                    <td class="edit-cell"><a href="#">View</a></td>
                 </tr>
                 <tr>
-                    <td>February</td>
-                    <td>$80</td>
+                    <td class="w-50">February</td>
+                    <td class="w-40">$80</td>
+                    <td class="edit-cell"><a href="#">View</a></td>
                 </tr>
             </tbody>
             <tfoot>
-                <tr>
-                    <td></td>
-                    <td><small>Sum: $180</small></td>
+                <tr class="sum">
+                    <td colspan="3"><small>Sum: $180</small></td>
                 </tr>
             </tfoot>
         </table>
     </div>
 
-    <p>_______________________________________________________________________________________________________________________________________</p>
-
-    <div id="tabelas">
+    <!-- <div id="tabelas">
         <table border="2">
             <caption><h3>Monthly savings</h3></caption>
             <thead>
                 <tr>
                     <th>Month</th>
-                    <th>Savings</th>
+                    <th colspan="2">Savings</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>January</td>
                     <td>$100</td>
+                    <td><a href="#">View</a></td>
                 </tr>
                 <tr>
                     <td>February</td>
                     <td>$80</td>
+                    <td><a href="#">View</a></td>
                 </tr>
             </tbody>
             <tfoot>
-                <tr>
-                    <td></td>
-                    <td><small>Sum: $180</small></td>
+                <tr class="sum">
+                    <td colspan="3"><small>Sum: $180</small></td>
                 </tr>
             </tfoot>
         </table>
-    </div>
-
-    <p>_______________________________________________________________________________________________________________________________________</p>
-
+    </div> -->
 
 </body>
 </html>
