--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -15,39 +15,67 @@
     <h1 class="edit-titulo">Formulários</h1>
     <div id="forms">
         <form>
-            <label for="txt">Texto: </label>
-            <input type="text" id="txt"/> 
+            <div>
+                <label for="txt">Texto: </label>
+                <input type="text" id="txt"/> 
+            </div>
+
             <br>
-            <label for="num">Número: </label>
-            <input type="number" step=".01" id="num"/>
+
+            <div>
+                <label for="num">Número: </label>
+                <input type="number" step=".01" id="num"/>
+            </div>
+
             <br>
-            <label for="col">Cor: </label>
-            <input type="color" id="col">
+
+            <div>
+                <label for="col">Cor: </label>
+                <input type="color" id="col">
+            </div>
+
             <br>
-            <label for="date">Data: </label>
-            <input type="date" id="date">
+
+            <div>
+                <label for="date">Data: </label>
+                <input type="date" id="date">
+            </div>
+
             <br>
-            <label for="pass">Senha: </label>
-            <input type="password" id="pass">
+
+            <div>
+                <label for="pass">Senha: </label>
+                <input type="password" id="pass">
+            </div>
+
             <br>
+
+            <div>
+                <input type="radio" name="radio" id="sim">
+                <label for="sim">Sim</label>
+            </div>
+            <div>
+                <input type="radio" name="radio" id="nao">
+                <label for="nao">Não</label>
+            </div>
+
             <br>
-            <input type="radio" name="radio" id="sim">
-            <label for="sim">Sim</label>
+
+            <div>
+                <input type="checkbox" name="Batata" id="ch_1">
+                <label for="ch_1">Batata</label>
+            </div>
+            <div>
+                <input type="checkbox" name="feijão" id="ch_2">
+                <label for="ch_2">Feijão</label>
+            </div>
+            <div>
+                <input type="checkbox" name="arroz" id="ch_3">
+                <label for="ch_3">Arroz</label>
+            </div>
+            
             <br>
-            <input type="radio" name="radio" id="nao">
-            <label for="nao">Não</label>
-            <br>
-            <br>
-            <input type="checkbox" name="Batata" id="ch_1">
-            <label for="ch_1">Batata</label>
-            <br>
-            <input type="checkbox" name="feijão" id="ch_2">
-            <label for="ch_2">Feijão</label>
-            <br>
-            <input type="checkbox" name="arroz" id="ch_3">
-            <label for="ch_3">Arroz</label>
-            <br>
-            <br>
+            
             <input type="submit" value="Enviar">
         </form>
     </div>
