--- a/HTML/h.html
+++ b/HTML/h.html
@@ -13,13 +13,25 @@
 </head>
 <body>
     <h1 class="edit-titulo">Títulos</h1>
-    <div id="titulos">
-        <h1>Título h1</h1>
-        <h2>Título h2</h2>
-        <h3>Título h3</h3>
-        <h4>Título h4</h4>
-        <h5>Título h5</h5>
-        <h6>Título h6</h6>
+    <div id="titulos" class="text-center">
+        <div class="titulos w-50">
+            <h1>Título h1</h1>
+        </div>
+        <div class="titulos w-50">
+            <h2>Título h2</h2>
+        </div>
+        <div class="titulos w-50">
+            <h3>Título h3</h3>
+        </div>
+        <div class="titulos w-50">
+            <h4>Título h4</h4>
+        </div>
+        <div class="titulos w-50">
+            <h5>Título h5</h5>
+        </div>
+        <div class="titulos w-50">
+            <h6>Título h6</h6>
+        </div>
     </div>
 </body>
 </html>
