--- a/HTML - bootstrap/index.html
+++ b/HTML - bootstrap/index.html
@@ -7,13 +7,17 @@
     <title>Página com Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body class="d-flex flex-column">
     <nav class="navbar bg-teal navbar-dark">
             <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="img/flower.png" alt="" width="30" height="28">
+                <img src="img/flower.png" alt="Icons made by <a class='link-light' href='https://www.flaticon.com/authors/freepik' title='Freepik'> Freepik </a> from <a class='link-light' href='https://www.flaticon.com/'' title='Flaticon'>www.flaticon.com</a>" width="30" height="28">
                 Meu Site
             </a>
             <div">
@@ -21,15 +25,67 @@
             </div>
         </div>
     </nav>
-    <div class="footer mt-auto hstack gap-3">
-        <div class="me-auto">
-            Icons made by <a class="link-light" href="https://www.flaticon.com/authors/freepik" title="Freepik"> Freepik </a> from <a class="link-light" href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+    <div class="wrapper fadeInDown">
+        <div id="formContent">
+            <div class="fadeIn first">
+                <img class="imga"src="img/flower.png" width="40" height="38" id="icon" alt="User Icon" />
+            </div>
+            <form>
+                <h6 class="cor-texto">Insira seu username: </h6>
+                <input type="text" id="login" class="fadeIn second" name="login" placeholder="username">
+                <h6 class="cor-texto">Insira sua senha:</h6>
+                <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+                <input type="submit" class="fadeIn fourth" value="Enter">
+            </form>
+            <div id="formFooter">
+                <a class="underlineHover" href="#">Esqueceu a senha?</a>
+            </div>
+        </div>
+    </div>
+    <div class="footer mt-auto hstack gap-3 text-white align-items-stretch">
+        <div class="d-flex flex-row align-items-stretch flex-grow-1">
+            <div class="flex-grow-1 d-flex flex-column">
+                <h4>Dúvidas</h4>
+                <hr class="me-2 mb-0">
+                <div class="section">
+                    <a href="" class="text-decoration-none link-light">Teste</a>
+                    <a href="" class="text-decoration-none link-light">Teste</a>
+                    <a href="" class="text-decoration-none link-light">Teste</a>
+                </div>
+            </div>
+            <div class="flex-grow-1 d-flex flex-column">
+                <h4>Contato</h4>
+                <hr class="me-2">
+                <div>
+                    <a href="" class="text-decoration-none link-light">Teste</a>
+                    <a href="" class="text-decoration-none link-light">Teste</a>
+                </div>
+            </div>
+            <div class="flex-grow-1 d-flex flex-column">
+                <h4>Sugestões</h4>
+                <hr class="me-2">   
+                <div>
+                    <a href="" class="text-decoration-none link-light">Teste</a>
+                    <a href="" class="text-decoration-none link-light">Teste</a>
+                    <a href="" class="text-decoration-none link-light">Teste</a>
+                    <a href="" class="text-decoration-none link-light">Teste</a>
+                </div>
+            </div>
         </div>
         <div class="vr"></div>
         <div class="d-flex flex-column gap-3 p-3">
-            <a href="#" class="text-decoration-none link-light">Facebook</a>
-            <a href="#" class="text-decoration-none link-light">Instagram</a>
-            <a href="#" class="text-decoration-none link-light">Linkedin</a>
+            <a href="#" class="text-decoration-none link-light mystyle">
+                <i class="bi bi-facebook" style="color: white"></i> 
+                Facebook
+            </a>
+            <a href="#" class="text-decoration-none link-light mystyle">
+                <i class="bi bi-instagram" style="color: white"></i> 
+                Instagram
+            </a>
+            <a href="#" class="text-decoration-none link-light mystyle">
+                <i class="bi bi-linkedin" style="color: white"></i> 
+                Linkedin
+            </a>
         </div>
     </div>
 </body>
