--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -15,61 +15,80 @@
     <h1 class="edit-titulo">Formulários</h1>
     <div id="forms">
         <form>
-            <div>
-                <label for="txt">Texto: </label>
+            <div class="forms w-50">
+                <h4>Insira seu nome completo:</h4>
+                <label for="txt"></label>
                 <input type="text" id="txt"/> 
             </div>
 
             <br>
 
-            <div>
-                <label for="num">Número: </label>
+            <div class="forms w-50">
+                <h4>Insira seu Cadastro de Pessoa Física (CPF):</h4>
+                <label for="num"></label>
                 <input type="number" step=".01" id="num"/>
             </div>
 
             <br>
 
-            <div>
+            <div class="forms w-50">
+                <h4>Informe a cor do seu olho:</h4>
                 <label for="col">Cor: </label>
                 <input type="color" id="col">
             </div>
 
             <br>
 
-            <div>
+            <div class="forms w-50">
+                <h4>Informe sua data de nascimento:</h4>
                 <label for="date">Data: </label>
                 <input type="date" id="date">
             </div>
 
             <br>
 
-            <div>
+            <div class="forms w-50">
+                <h4>Crie uma senha:</h4>
                 <label for="pass">Senha: </label>
                 <input type="password" id="pass">
             </div>
 
             <br>
 
-            <div>
-                <input type="radio" name="radio" id="sim">
-                <label for="sim">Sim</label>
+            <div class="forms w-50">
+                <h4>Repita sua senha:</h4>
+                <label for="pass">Senha: </label>
+                <input type="password" id="pass">
             </div>
-            <div>
-                <input type="radio" name="radio" id="nao">
-                <label for="nao">Não</label>
+
+            <br>
+            
+            <div class="forms w-50">
+                <h4>Informe seu gênero:</h4>
+                <input type="radio" name="radio" id="feminino">
+                <label for="feminino">Feminino</label>
+                <br>
+                <input type="radio" name="radio" id="masculino">
+                <label for="masculino">Masculino</label>
+                <br>
+                <input type="radio" name="radio" id="outro">
+                <label for="outro">Outro</label>
+                <br>
+                <input type="radio" name="radio" id="naoinformar">
+                <label for="naoinformar">Não informar</label>
             </div>
 
             <br>
 
-            <div>
+            <div class="forms w-50">
                 <input type="checkbox" name="Batata" id="ch_1">
                 <label for="ch_1">Batata</label>
             </div>
-            <div>
+            <div class="forms w-50">
                 <input type="checkbox" name="feijão" id="ch_2">
                 <label for="ch_2">Feijão</label>
             </div>
-            <div>
+            <div class="forms w-50">
                 <input type="checkbox" name="arroz" id="ch_3">
                 <label for="ch_3">Arroz</label>
             </div>
