--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,6 +10,25 @@
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript">
+        function load() {
+            let guess = Math.floor(Math.random() * 11);
+            let userInput = -1;
+            while(guess != userInput) {
+                userInput = prompt("Take a whild guess: ");
+            }
+        }
+        
+        // var count = 0;
+        // function onClick() {
+        //     count++;
+        //     console.log(count);
+        // }
+        // function load() {
+        //     alert("Hello!");
+        // }
+        window.onload = load;
+    </script>
 </head>
 <body>
     <h1 class="edit-titulo">Página Inicial</h1>
@@ -39,8 +58,12 @@
             <li >
                 <a href="iframe.html">iFrame</a>
             </li>
+            <li>
+                <a href="javascript.html">JavaScripto</a>
+            </li>
         </ul>
     </aside>
+    <button onclick="onClick()">Contar</button>
 </body>
 </html>
 <!-- html:5 --> 
