--- a/HTML/listas.html
+++ b/HTML/listas.html
@@ -30,8 +30,8 @@
 
     <p>__________________________________________________________________</p>
 
-    <h4>Tarefas Diárias!</h4>
-        <ul>
+    <div id="listas">
+        <h4>Tarefas Diárias!</h4>
             <li>Lavar louça</li>
             <li>Molhar plantas</li>
             <li>
@@ -41,6 +41,6 @@
                     <li>MySQL</li>
                 </ul>
             </li>
-        </ul>
+    </div>
 </body>
 </html>
