--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -94,8 +94,10 @@
             </div>
             
             <br>
-            
-            <input type="submit" value="Enviar">
+
+            <div class="text-center">
+                <input type="submit" value="Enviar">
+            </div>
         </form>
     </div>
 </body>
