--- a/HTML/index.html
+++ b/HTML/index.html
@@ -61,6 +61,9 @@
             <li>
                 <a href="javascript.html">JavaScripto</a>
             </li>
+            <li>
+                <a href="api.html">Api</a>
+            </li>
         </ul>
     </aside>
     <button onclick="onClick()">Contar</button>
