--- a/HTML/index.html
+++ b/HTML/index.html
@@ -64,9 +64,15 @@
             <li>
                 <a href="api.html">Api</a>
             </li>
+            <li>
+                <a href="voltaaomundo.html">Jogo Volta ao mundo</a>
+            </li>
         </ul>
     </aside>
-    <button onclick="onClick()">Contar</button>
+    <div class="text-center">
+        <br>
+        <button onclick="onClick()">Contar</button>
+    </div>
 </body>
 </html>
 <!-- html:5 --> 
