--- a/HTML/api.html
+++ b/HTML/api.html
@@ -55,10 +55,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gatinhos</title>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="css/styles.css">
-    <script type="text/javascript">
+    <script id="" type="text/javascript">
         function requestImg(text) {
             let url = text == null ?
                 "https://cataas.com/cat?json=true" :
