--- a/HTML/api.html
+++ b/HTML/api.html
@@ -57,7 +57,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gatinhos</title>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/stylesAPI.css">
     <script id="" type="text/javascript">
         function requestImg(text) {
             let url = text == null ?
@@ -93,7 +93,7 @@
         }
     </script>
 </head>
-<body>
+<body class="body">
     <h1 class="edit-titulo">Gatinhos</h1>
     <div id="gatinhosfofos">
         <img src />
