--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,13 +11,14 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="css/styles.css">
     <script type="text/javascript">
-        function load() {
-            let guess = Math.floor(Math.random() * 11);
-            let userInput = -1;
-            while(guess != userInput) {
-                userInput = prompt("Take a whild guess: ");
-            }
-        }
+
+        // function load() {
+        //     let guess = Math.floor(Math.random() * 11);
+        //     let userInput = -1;
+        //     while(guess != userInput) {
+        //         userInput = prompt("Take a whild guess: ");
+        //     }
+        // }
         
         // var count = 0;
         // function onClick() {
@@ -27,6 +28,7 @@
         // function load() {
         //     alert("Hello!");
         // }
+
         window.onload = load;
     </script>
 </head>
@@ -71,7 +73,7 @@
     </aside>
     <div class="text-center">
         <br>
-        <button onclick="onClick()">Contar</button>
+        <!-- <button onclick="onClick()">Contar</button> -->
     </div>
 </body>
 </html>
